# LA_recomendation_system

./: .gitignore  README.md  configs.py  funkSVD.py  loading_testing.py  plot_data.py  preprocess_data.py  recommendation.py  recommendation_using_svd.py  run.py  svd_svdpp.py  test_another.py  utils.py  vizualize.py
FunkSVD/: CMakeLists.txt  data_loader.h  main.cpp  time_measure.h  utils.h
results/: BaisedFunkSVD.json  SVD.json  SVDmm.json  SVDpp.json
time_dependent_svd/: main.py  params.py  prepare_data.py  timeSVD.py
